fix: add tools.exec and tools.agentToAgent to generated config
Enable exec with security=full and ask=off by default (private server,
no sandbox). Enable agent-to-agent communication for council support.

--- a/hatch.yaml
+++ b/hatch.yaml
@@ -806,6 +806,15 @@ write_files:
           "headless": false,
           "noSandbox": true
         },
+        "tools": {
+          "agentToAgent": {
+            "enabled": true
+          },
+          "exec": {
+            "security": "full",
+            "ask": "off"
+          }
+        },
         "agents": {
           "defaults": {
             "model": {"primary": "anthropic/claude-opus-4-5"},
