--- a/hatch.yaml
+++ b/hatch.yaml
@@ -191,17 +191,62 @@ write_files:
         local DBT="${AGENT1_DISCORD_BOT_TOKEN}"
         local DOI="${DISCORD_OWNER_ID:-$(d "$DISCORD_OWNER_ID_B64")}"
         [ -z "$DBT" ] || [ -z "$DOI" ] && return 1
-        # Create DM channel with owner
-        local DM_RESP
-        DM_RESP=$(curl -sf --max-time 10 \
-          -X POST "https://discord.com/api/v10/users/@me/channels" \
-          -H "Authorization: Bot ${DBT}" \
-          -H "Content-Type: application/json" \
-          -d "{\"recipient_id\":\"${DOI}\"}" 2>/dev/null)
-        [ -z "$DM_RESP" ] && return 1
-        local CHANNEL_ID
-        CHANNEL_ID=$(echo "$DM_RESP" | python3 -c "import sys,json;print(json.load(sys.stdin).get('id',''))" 2>/dev/null)
-        [ -z "$CHANNEL_ID" ] && return 1
+
+        local CHANNEL_ID=""
+        local CACHE_FILE="${DISCORD_DM_CACHE_FILE:-/tmp/discord-dm-cache-${DOI}}"
+        local CACHE_MAX_AGE="${DISCORD_DM_CACHE_TTL:-86400}"  # default 24 hours
+
+        # Check cache first
+        if [ -f "$CACHE_FILE" ]; then
+          local CACHE_AGE=$(( $(date +%s) - $(stat -c %Y "$CACHE_FILE" 2>/dev/null || echo 0) ))
+          if [ "$CACHE_AGE" -lt "$CACHE_MAX_AGE" ]; then
+            CHANNEL_ID=$(cat "$CACHE_FILE" 2>/dev/null)
+          fi
+        fi
+
+        atomic_write_cache() {
+          local path="$1"
+          local value="$2"
+
+          python3 - "$path" "$value" <<'PY'
+      import os, sys, tempfile
+      path = sys.argv[1]
+      value = sys.argv[2]
+      base_dir = os.path.dirname(os.path.abspath(path)) or "."
+      os.makedirs(base_dir, exist_ok=True)
+      fd, tmppath = tempfile.mkstemp(prefix=".tmp-", dir=base_dir)
+      try:
+          with os.fdopen(fd, "w", encoding="utf-8") as f:
+              f.write(value)
+              f.flush()
+              os.fsync(f.fileno())
+          os.replace(tmppath, path)
+      except Exception:
+          try:
+              os.unlink(tmppath)
+          except Exception:
+              pass
+          raise
+      PY
+        }
+
+        # If no cached channel ID, fetch from API
+        if [ -z "$CHANNEL_ID" ]; then
+          local DM_RESP
+          DM_RESP=$(curl -sf --max-time 10 \
+            -X POST "https://discord.com/api/v10/users/@me/channels" \
+            -H "Authorization: Bot ${DBT}" \
+            -H "Content-Type: application/json" \
+            -d "{\"recipient_id\":\"${DOI}\"}" 2>/dev/null)
+          [ -z "$DM_RESP" ] && return 1
+
+          CHANNEL_ID=$(echo "$DM_RESP" | python3 -c "import sys,json;print(json.load(sys.stdin).get('id',''))" 2>/dev/null)
+          [ -z "$CHANNEL_ID" ] && return 1
+
+          # Cache the channel ID for future use (atomic)
+          atomic_write_cache "$CACHE_FILE" "$CHANNEL_ID" 2>/dev/null || true
+        fi
+
         # Send message to DM channel
         curl -sf --max-time 10 \
           -X POST "https://discord.com/api/v10/channels/${CHANNEL_ID}/messages" \
@@ -548,10 +593,11 @@ write_files:
       [Service]
       Type=simple
       User=$USERNAME
-      ExecStart=/usr/bin/Xvfb :10 -screen 0 1920x1080x24 -ac
+      ExecStart=/bin/bash -c 'echo \$\$ > /tmp/xvfb.pid && exec /usr/bin/Xvfb :10 -screen 0 1920x1080x24 -ac'
+      ExecStopPost=/bin/rm -f /tmp/xvfb.pid
       Restart=always
       [Install]
-      WantedBy=multi-user.target
+      # WantedBy removed - started explicitly after phase2 completes
       SVC
       cat > /etc/systemd/system/desktop.service <<SVC
       [Unit]
@@ -564,10 +610,11 @@ write_files:
       Environment=DISPLAY=:10
       Environment=HOME=$H
       Environment=XDG_RUNTIME_DIR=/run/user/$(id -u $USERNAME)
-      ExecStartPre=/bin/bash -c 'UID_NUM=$(id -u $USERNAME); mkdir -p /run/user/\$UID_NUM && chown $USERNAME:$USERNAME /run/user/\$UID_NUM && chmod 700 /run/user/\$UID_NUM'
+      ExecStartPre=+/bin/bash -c 'UID_NUM=$(id -u $USERNAME); mkdir -p /run/user/\$UID_NUM && chown $USERNAME:$USERNAME /run/user/\$UID_NUM && chmod 700 /run/user/\$UID_NUM'
       ExecStartPre=/bin/sleep 2
       ExecStart=/usr/bin/dbus-launch --exit-with-session /usr/bin/xfce4-session
-      Restart=on-failure
+      Restart=always
+      RestartSec=5
       [Install]
       WantedBy=multi-user.target
       SVC
@@ -582,19 +629,41 @@ write_files:
       Environment=DISPLAY=:10
       ExecStartPre=/bin/sleep 3
       ExecStart=/usr/bin/x11vnc -display :10 -rfbport 5900 -forever -nopw -shared -noxdamage -noxrecord -fs 1.0 -defer 10 -wait 5
-      Restart=on-failure
+      Restart=always
+      RestartSec=5
       [Install]
-      WantedBy=multi-user.target
+      # WantedBy removed - started explicitly after phase2 completes
       SVC
       mkdir -p $H/.config/xfce4/xfconf/xfce-perchannel-xml
+      # Write desktop background config BEFORE starting desktop service (fixes race condition)
+      if [ -n "$BG_COLOR" ] && [ ${#BG_COLOR} -eq 6 ]; then
+        R=$(printf "%.5f" $(echo "scale=5; $((16#${BG_COLOR:0:2}))/255" | bc))
+        G=$(printf "%.5f" $(echo "scale=5; $((16#${BG_COLOR:2:2}))/255" | bc))
+        B=$(printf "%.5f" $(echo "scale=5; $((16#${BG_COLOR:4:2}))/255" | bc))
+        cat > "$H/.config/xfce4/xfconf/xfce-perchannel-xml/xfce4-desktop.xml" <<BGXML
+      <?xml version="1.0"?><channel name="xfce4-desktop" version="1.0"><property name="backdrop" type="empty"><property name="screen0" type="empty"><property name="monitorscreen" type="empty"><property name="workspace0" type="empty"><property name="color-style" type="int" value="0"/><property name="image-style" type="int" value="0"/><property name="rgba1" type="array"><value type="double" value="${R}"/><value type="double" value="${G}"/><value type="double" value="${B}"/><value type="double" value="1"/></property></property></property></property></property></channel>
+      BGXML
+      fi
       chown -R $USERNAME:$USERNAME $H/.config
       systemctl daemon-reload
       systemctl enable xvfb desktop x11vnc
-      systemctl start xvfb
-      sleep 2
-      systemctl start desktop
-      sleep 3
-      systemctl start x11vnc
+      # MOVED TO END: systemctl start xvfb
+      # MOVED TO END: # Wait for Xvfb PID file and verify process is actually Xvfb (avoids cross-shell $! race + PID reuse)
+      # MOVED TO END: for i in {1..30}; do
+      # MOVED TO END:   if [ -f /tmp/xvfb.pid ]; then
+      # MOVED TO END:     XVFB_PID=$(cat /tmp/xvfb.pid 2>/dev/null)
+      # MOVED TO END:     # Verify PID exists AND process is actually Xvfb (not a recycled PID)
+      # MOVED TO END:     if [ -n "$XVFB_PID" ] && kill -0 "$XVFB_PID" 2>/dev/null; then
+      # MOVED TO END:       if grep -q "Xvfb" /proc/"$XVFB_PID"/cmdline 2>/dev/null; then
+      # MOVED TO END:         break
+      # MOVED TO END:       fi
+      # MOVED TO END:     fi
+      # MOVED TO END:   fi
+      # MOVED TO END:   sleep 0.5
+      # MOVED TO END: done
+      # MOVED TO END: systemctl start desktop
+      # MOVED TO END: sleep 3
+      # MOVED TO END: systemctl start x11vnc
       mkdir -p $H/Desktop
       cat > $H/Desktop/google-chrome.desktop <<'DESK'
       [Desktop Entry]
@@ -714,6 +783,26 @@ write_files:
       systemctl enable unattended-upgrades apt-daily.timer apt-daily-upgrade.timer
       systemctl enable clawdbot-sync.timer 2>/dev/null || true
       systemctl start clawdbot-sync.timer 2>/dev/null || true
+      # Start desktop services now that everything is installed
+      $S 9 "starting-desktop"
+      systemctl start xvfb
+      # Wait for Xvfb PID file and verify process is actually Xvfb (avoids cross-shell $! race + PID reuse)
+      for i in {1..30}; do
+        if [ -f /tmp/xvfb.pid ]; then
+          XVFB_PID=$(cat /tmp/xvfb.pid 2>/dev/null)
+          # Verify PID exists AND process is actually Xvfb (not a recycled PID)
+          if [ -n "$XVFB_PID" ] && kill -0 "$XVFB_PID" 2>/dev/null; then
+            if grep -q "Xvfb" /proc/"$XVFB_PID"/cmdline 2>/dev/null; then
+              break
+            fi
+          fi
+        fi
+        sleep 0.5
+      done
+      systemctl start desktop
+      sleep 3
+      systemctl start x11vnc
+      systemctl restart xrdp
       touch /var/lib/init-status/phase2-complete
       touch /var/lib/init-status/needs-post-boot-check
       GT=$(cat /home/bot/.clawdbot/gateway-token.txt 2>/dev/null)
@@ -1093,6 +1182,10 @@ write_files:
         cat > "$DXML" <<BGXML
       <?xml version="1.0"?><channel name="xfce4-desktop" version="1.0"><property name="backdrop" type="empty"><property name="screen0" type="empty"><property name="monitorscreen" type="empty"><property name="workspace0" type="empty"><property name="color-style" type="int" value="0"/><property name="image-style" type="int" value="0"/><property name="rgba1" type="array"><value type="double" value="${R}"/><value type="double" value="${G}"/><value type="double" value="${B}"/><value type="double" value="1"/></property></property></property></property></property></channel>
       BGXML
+        # Reload desktop config if xfdesktop is running (for config rebuilds while desktop is active)
+        if pgrep -x xfdesktop >/dev/null 2>&1; then
+          DISPLAY=:10 su - $USERNAME -c "xfdesktop --reload" 2>/dev/null || true
+        fi
       fi
       chown -R $USERNAME:$USERNAME $H/.clawdbot $H/clawd
       chmod 700 $H/.clawdbot
@@ -1218,7 +1311,11 @@ write_files:
   - path: /home/bot/.config/xfce4/xfconf/xfce-perchannel-xml/xsettings.xml
     defer: true
     content: |
-      <?xml version="1.0"?><channel name="xsettings" version="1.0"><property name="Net" type="empty"><property name="ThemeName" type="string" value="Adwaita-dark"/><property name="IconThemeName" type="string" value="Yaru-blue-dark"/></property></channel>
+      <?xml version="1.0"?><channel name="xsettings" version="1.0"><property name="Net" type="empty"><property name="ThemeName" type="string" value="Yaru-blue-dark"/><property name="IconThemeName" type="string" value="Yaru-blue-dark"/></property></channel>
+  - path: /home/bot/.config/xfce4/xfconf/xfce-perchannel-xml/xfwm4.xml
+    defer: true
+    content: |
+      <?xml version="1.0"?><channel name="xfwm4" version="1.0"><property name="general" type="empty"><property name="theme" type="string" value="Yaru-blue-dark"/></property></channel>
   - path: /home/bot/clawd/TOOLS.md
     defer: true
     content: |
@@ -1275,6 +1372,36 @@ write_files:
       mkdir -p "$HOME/Dropbox"; fusermount -uz "$HOME/Dropbox" 2>/dev/null || true
       rclone mount dropbox: "$HOME/Dropbox" --vfs-cache-mode writes --daemon
       sleep 2 && thunar "$HOME/Dropbox"
+  - path: /usr/local/lib/rclone-safe.sh
+    permissions: "0644"
+    content: |
+      #!/bin/bash
+      # rclone-safe.sh -- Path validation for safe rclone operations
+      # Prevents empty paths, root paths, and unexpected destinations.
+      rclone_is_remote_path() { case "$1" in [A-Za-z0-9_-]*:*) return 0;; *) return 1;; esac; }
+      _validate_one_path() {
+        local p="$1" role="$2" p_trim
+        [ -z "${p}" ] && { echo "ERROR: refusing rclone: ${role} path is empty" >&2; return 1; }
+        [ -z "${p//[[:space:]]/}" ] && { echo "ERROR: refusing rclone: ${role} path is empty" >&2; return 1; }
+        p_trim="${p%/}"; [ -z "$p_trim" ] && p_trim="/"
+        [ "$p_trim" = "/" ] || [ "$p_trim" = "/*" ] && { echo "ERROR: refusing rclone: ${role} path is '/'" >&2; return 1; }
+        if rclone_is_remote_path "$p"; then
+          case "$p" in *:|*:/*|*:/\*) echo "ERROR: refusing rclone: ${role} remote path unsafe: '$p'" >&2; return 1;; esac
+          echo "$p" | grep -Eq '^dropbox:clawdbot-memory/[^/]+(/.*)?$' || { echo "ERROR: refusing rclone: ${role} remote path unexpected: '$p'" >&2; return 1; }
+        else
+          echo "$p" | grep -Eq '^/home/[^/]+/(clawd|\.clawdbot)(/.*)?$' || { echo "ERROR: refusing rclone: ${role} local path unexpected: '$p'" >&2; return 1; }
+        fi
+        return 0
+      }
+      validate_rclone_path() { _validate_one_path "$1" source || return 1; _validate_one_path "$2" destination || return 1; }
+      safe_rclone_copy() { local src="$1" dst="$2"; shift 2 || true; validate_rclone_path "$src" "$dst" || return 2; command rclone copy "$src" "$dst" "$@"; }
+      safe_rclone_su_copy() {
+        local user="$1" src="$2" dst="$3"; shift 3 || true
+        [ -z "${user}" ] && { echo "ERROR: refusing rclone: USERNAME is empty" >&2; return 2; }
+        validate_rclone_path "$src" "$dst" || return 2
+        local cmd arg; cmd="rclone copy $(printf %q "$src") $(printf %q "$dst")"; for arg in "$@"; do cmd+=" $(printf %q "$arg")"; done
+        su - "$user" -c "$cmd"
+      }
   - path: /usr/local/bin/restore-clawdbot-state.sh
     permissions: "0755"
     content: |
@@ -1284,6 +1411,11 @@ write_files:
       set -a; source /etc/droplet.env; set +a
       d() { [ -n "$1" ] && echo "$1" | base64 -d 2>/dev/null || echo ""; }
       [ -f /etc/habitat-parsed.env ] && source /etc/habitat-parsed.env
+      # Source validation library
+      [ -f /usr/local/lib/rclone-safe.sh ] && source /usr/local/lib/rclone-safe.sh
+      if ! type safe_rclone_su_copy &>/dev/null; then
+        safe_rclone_su_copy() { local u="$1" s="$2" d="$3"; shift 3; [ -z "$s" ]||[ -z "$d" ]||[ "${s%/}" = "/" ]||[ "${d%/}" = "/" ]&&{ echo "ERROR: invalid path" >&2; return 2; }; su - "$u" -c "rclone copy $(printf %q "$s") $(printf %q "$d") $*"; }
+      fi
       TG="/usr/local/bin/tg-notify.sh"
       DBT=$(d "$DROPBOX_TOKEN_B64")
       if [ -z "$DBT" ]; then
@@ -1291,26 +1423,28 @@ write_files:
         $TG "[WARN] Memory restore skipped - no Dropbox token provided. Bot will start with empty memory." || true
         exit 0
       fi
+      [ -z "$USERNAME" ] && { echo "ERROR: USERNAME not set" >&2; exit 1; }
       HN="${HABITAT_NAME:-default}"
+      [ -z "$HN" ] || [ "$HN" = "/" ] && { echo "ERROR: invalid HABITAT_NAME" >&2; exit 1; }
       H="/home/$USERNAME"; R="dropbox:clawdbot-memory/${HN}"
       AC=${AGENT_COUNT:-1}
       FAIL=0
       echo "Restoring from $R"
       for f in MEMORY.md USER.md; do
         echo "  memory: $f"
-        su - $USERNAME -c "rclone copy '$R/$f' '$H/clawd/' -v" || { echo "  WARN: $f failed"; FAIL=$((FAIL+1)); }
+        safe_rclone_su_copy $USERNAME "$R/$f" "$H/clawd/" -v || { echo "  WARN: $f failed"; FAIL=$((FAIL+1)); }
       done
       for i in $(seq 1 $AC); do
         a="agent${i}"
         AD="$H/clawd/agents/$a"; [ -d "$AD" ] || continue
         echo "  agent memory: $a"
-        su - $USERNAME -c "rclone copy '$R/agents/${a}/memory/' '$AD/memory/' -v" || { echo "  WARN: $a memory failed"; FAIL=$((FAIL+1)); }
+        safe_rclone_su_copy $USERNAME "$R/agents/${a}/memory/" "$AD/memory/" -v || { echo "  WARN: $a memory failed"; FAIL=$((FAIL+1)); }
       done
       for i in $(seq 1 $AC); do
         a="agent${i}"
         TD="$H/.clawdbot/agents/$a/sessions"; mkdir -p "$TD"
         echo "  sessions: $a"
-        su - $USERNAME -c "rclone copy '$R/agents/${a}/sessions/' '$TD/' --include '*.jsonl' -v" || { echo "  WARN: $a sessions failed"; FAIL=$((FAIL+1)); }
+        safe_rclone_su_copy $USERNAME "$R/agents/${a}/sessions/" "$TD/" --include '*.jsonl' -v || { echo "  WARN: $a sessions failed"; FAIL=$((FAIL+1)); }
       done
       chown -R $USERNAME:$USERNAME $H/clawd $H/.clawdbot
       TC=$(find $H/.clawdbot -name '*.jsonl' 2>/dev/null | wc -l)
@@ -1322,7 +1456,7 @@ write_files:
         for i in $(seq 1 $AC); do
           a="agent${i}"
           TD="$H/.clawdbot/agents/$a/sessions"; mkdir -p "$TD"
-          su - $USERNAME -c "rclone copy '$R/agents/${a}/sessions/' '$TD/' --include '*.jsonl' -v" || true
+          safe_rclone_su_copy $USERNAME "$R/agents/${a}/sessions/" "$TD/" --include '*.jsonl' -v || true
         done
         chown -R $USERNAME:$USERNAME $H/.clawdbot
         TC2=$(find $H/.clawdbot -name '*.jsonl' 2>/dev/null | wc -l)
@@ -1340,18 +1474,25 @@ write_files:
       set -a; source /etc/droplet.env; set +a
       d() { [ -n "$1" ] && echo "$1" | base64 -d 2>/dev/null || echo ""; }
       [ -f /etc/habitat-parsed.env ] && source /etc/habitat-parsed.env
+      # Source validation library
+      [ -f /usr/local/lib/rclone-safe.sh ] && source /usr/local/lib/rclone-safe.sh
+      if ! type safe_rclone_su_copy &>/dev/null; then
+        safe_rclone_su_copy() { local u="$1" s="$2" d="$3"; shift 3; [ -z "$s" ]||[ -z "$d" ]||[ "${s%/}" = "/" ]||[ "${d%/}" = "/" ]&&{ echo "ERROR: invalid path" >&2; return 2; }; su - "$u" -c "rclone copy $(printf %q "$s") $(printf %q "$d") $*"; }
+      fi
       DBT=$(d "$DROPBOX_TOKEN_B64"); [ -z "$DBT" ] && exit 0
+      [ -z "$USERNAME" ] && { echo "ERROR: USERNAME not set" >&2; exit 1; }
       HN="${HABITAT_NAME:-default}"
+      [ -z "$HN" ] || [ "$HN" = "/" ] && { echo "ERROR: invalid HABITAT_NAME" >&2; exit 1; }
       H="/home/$USERNAME"; R="dropbox:clawdbot-memory/${HN}"
       AC=${AGENT_COUNT:-1}
-      for f in MEMORY.md USER.md; do [ -f "$H/clawd/$f" ] && su - $USERNAME -c "rclone copy '$H/clawd/$f' '$R/' 2>/dev/null" || true; done
+      for f in MEMORY.md USER.md; do [ -f "$H/clawd/$f" ] && safe_rclone_su_copy $USERNAME "$H/clawd/$f" "$R/" 2>/dev/null || true; done
       for i in $(seq 1 $AC); do
         a="agent${i}"; AD="$H/clawd/agents/$a"; [ -d "$AD" ] || continue
-        su - $USERNAME -c "rclone sync '$AD/memory' '$R/agents/${a}/memory' 2>/dev/null" || true
+        safe_rclone_su_copy $USERNAME "$AD/memory" "$R/agents/${a}/memory" 2>/dev/null || true
       done
       for i in $(seq 1 $AC); do
         a="agent${i}"; TD="$H/.clawdbot/agents/$a/sessions"
-        [ -d "$TD" ] && su - $USERNAME -c "rclone copy '$TD/' '$R/agents/${a}/sessions/' --include '*.jsonl' 2>/dev/null" || true
+        [ -d "$TD" ] && safe_rclone_su_copy $USERNAME "$TD/" "$R/agents/${a}/sessions/" --include '*.jsonl' 2>/dev/null || true
       done
   - path: /usr/local/bin/schedule-destruct.sh
     permissions: "0755"
