fix: x11vnc starts after reboot via desktop.service dependency
Fixes #80

Changes to x11vnc.service:
- Add ConditionPathExists=/var/lib/init-status/phase2-complete
  (defense-in-depth: blocks VNC during provisioning)
- Add WantedBy=desktop.service in [Install] section
  (pulls x11vnc when desktop starts after reboot)

This fixes the regression from PR #79 where WantedBy was removed
but no alternative startup mechanism was added.

Testing:
- Added tests/test_x11vnc_service.py with 9 test cases
- Verified on live droplet: x11vnc now starts automatically

--- a/hatch.yaml
+++ b/hatch.yaml
@@ -623,6 +623,7 @@ write_files:
       Description=x11vnc
       After=desktop.service
       Requires=desktop.service
+      ConditionPathExists=/var/lib/init-status/phase2-complete
       [Service]
       Type=simple
       User=$USERNAME
@@ -632,7 +633,7 @@ write_files:
       Restart=always
       RestartSec=5
       [Install]
-      # WantedBy removed - started explicitly after phase2 completes
+      WantedBy=desktop.service
       SVC
       mkdir -p $H/.config/xfce4/xfconf/xfce-perchannel-xml
       # Write desktop background config BEFORE starting desktop service (fixes race condition)
