fix: install yaru-theme-gtk for Yaru-blue-dark theme
The xfwm4 config specifies Yaru-blue-dark but the package was missing,
causing xfconf to regenerate with the Default theme on boot.

Adds yaru-theme-gtk to desktop-environment packages.
Adds 4 tests to verify theme package consistency.

--- a/hatch.yaml
+++ b/hatch.yaml
@@ -557,7 +557,7 @@ write_files:
       apt-get update -qq >> "$LOG" 2>&1
       DEBIAN_FRONTEND=noninteractive NEEDRESTART_MODE=a apt-get install -y --no-install-recommends \
         xrdp xorgxrdp xvfb x11vnc lightdm dbus-x11 xserver-xorg-video-dummy \
-        xfce4 xfce4-goodies xfce4-terminal elementary-xfce-icon-theme \
+        xfce4 xfce4-goodies xfce4-terminal elementary-xfce-icon-theme yaru-theme-gtk \
         >> "$LOG" 2>&1
       $S 5 "developer-tools"
       DEBIAN_FRONTEND=noninteractive NEEDRESTART_MODE=a apt-get install -y --no-install-recommends \
