fix: Bind API server to 0.0.0.0 with configurable apiBindAddress
Reverts the localhost-only binding from commit 3eb679a and adds
configurable bind address via habitat.apiBindAddress setting.

- Default: 0.0.0.0 (all interfaces) for iOS Shortcut remote access
- Optional: Set `apiBindAddress: "127.0.0.1"` in habitat config for localhost-only

- /status, /health: Public (needed for polling)
- /stages, /log, /config: HMAC auth required
- /config/upload, /config/apply: HMAC auth required

- scripts/api-server.py: Read API_BIND_ADDRESS from env (default: 0.0.0.0)
- scripts/parse-habitat.py: Extract apiBindAddress from habitat config
- hatch.yaml: Updated inline versions + EnvironmentFile for habitat-parsed.env
- api-server.service: Added EnvironmentFile=-/etc/habitat-parsed.env

Closes #103

--- a/hatch.yaml
+++ b/hatch.yaml
@@ -122,6 +122,8 @@ write_files:
           f.write('COUNCIL_GROUP_NAME="{}"\n'.format(council.get("groupName", "")))
           f.write('COUNCIL_JUDGE="{}"\n'.format(council.get("judge", "")))
           f.write('HABITAT_DOMAIN="{}"\n'.format(hab.get("domain", "")))
+          # API server bind address (default: 0.0.0.0 for iOS Shortcut remote access)
+          f.write('API_BIND_ADDRESS="{}"\n'.format(hab.get("apiBindAddress", "0.0.0.0")))
           f.write('GLOBAL_IDENTITY_B64="{}"\n'.format(b64(hab.get("globalIdentity", ""))))
           f.write('GLOBAL_BOOT_B64="{}"\n'.format(b64(hab.get("globalBoot", ""))))
           f.write('GLOBAL_BOOTSTRAP_B64="{}"\n'.format(b64(hab.get("globalBootstrap", ""))))
@@ -299,6 +301,7 @@ write_files:
       After=network.target
       [Service]
       EnvironmentFile=/etc/api-server.env
+      EnvironmentFile=-/etc/habitat-parsed.env
       ExecStart=/usr/local/bin/api-server.py
       Restart=always
       RestartSec=3
@@ -374,6 +377,7 @@ write_files:
       import http.server,socketserver,subprocess,json,os,base64,hmac,hashlib,time
       PORT=8080
       API_SECRET=os.getenv('API_SECRET','')
+      API_BIND_ADDRESS=os.getenv('API_BIND_ADDRESS','0.0.0.0')
       HABITAT_PATH='/etc/habitat.json'
       AGENTS_PATH='/etc/agents.json'
       APPLY_SCRIPT='/usr/local/bin/apply-config.sh'
@@ -578,12 +582,16 @@ write_files:
 
       class R(socketserver.TCPServer):allow_reuse_address=True
       if __name__=='__main__':
-        # SECURITY: Bind to localhost only (127.0.0.1) to prevent external network access.
-        # This API exposes droplet config, logs, and control endpoints. External exposure
-        # would allow unauthorized config changes, log access, and service control.
-        # SSH tunneling or local gateway scripts are the only supported access methods.
-        print(f"[api-server] Starting on 127.0.0.1:{PORT} (localhost-only, secure)")
-        with R(("127.0.0.1",PORT),H) as h:h.serve_forever()
+        # SECURITY MODEL:
+        # - Default: 0.0.0.0 (all interfaces) for iOS Shortcut remote access
+        # - Configurable via API_BIND_ADDRESS env var or habitat.apiBindAddress
+        # - /status, /health: Public (read-only, no secrets, needed for polling)
+        # - /stages, /log, /config: HMAC auth required (may contain sensitive info)
+        # - /config/upload, /config/apply: HMAC auth required (mutation endpoints)
+        # - Ephemeral droplets (~hours lifetime) limit exposure window
+        bind_addr = API_BIND_ADDRESS if API_BIND_ADDRESS != '0.0.0.0' else ''
+        print(f"[api-server] Starting on {API_BIND_ADDRESS}:{PORT}")
+        with R((bind_addr,PORT),H) as h:h.serve_forever()
 
   - path: /usr/local/sbin/phase1-critical.sh
     permissions: "0755"
