--- a/hatch.yaml
+++ b/hatch.yaml
@@ -30,7 +30,7 @@ write_files:
       CALDAV_URL_B64="[[CALDAV_URL_B64]]"
       CALDAV_USER_B64="[[CALDAV_USER_B64]]"
       CALDAV_PASSWORD_B64="[[CALDAV_PASSWORD_B64]]"
-      API_SECRET="[[API_SECRET]]"
+      API_SECRET_B64="[[API_SECRET_B64]]"
       GH_TOKEN_B64="[[GH_TOKEN_B64]]"
       GMAIL_CLIENT_ID_B64="[[GMAIL_CLIENT_ID_B64]]"
       GMAIL_CLIENT_SECRET_B64="[[GMAIL_CLIENT_SECRET_B64]]"
@@ -1865,8 +1865,9 @@ runcmd:
       # Uses secret from Shortcut if provided, otherwise generates random
       if [ ! -f /etc/api-server.env ]; then
         source /etc/droplet.env
-        if [ -n "$API_SECRET" ] && [ "$API_SECRET" != "[[API_SECRET]]" ]; then
-          # Use Shortcut-provided secret
+        if [ -n "$API_SECRET_B64" ] && [ "$API_SECRET_B64" != "[[API_SECRET_B64]]" ]; then
+          # Decode Shortcut-provided secret
+          API_SECRET=$(echo "$API_SECRET_B64" | base64 -d)
           echo "[api-server] Using provided API_SECRET"
         else
           # Generate random secret (fallback for older Shortcuts)
