feat(TASK-28): Revert API_BIND_ADDRESS to secure-by-default (127.0.0.1)
Security Hardening: Change default API server bind address from 0.0.0.0
(all interfaces) to 127.0.0.1 (localhost only) for secure-by-default
posture. Remote access now requires explicit opt-in via habitat config.

Changes:
- AC1: scripts/api-server.py default changed to 127.0.0.1
- AC2: scripts/parse-habitat.py default changed to 127.0.0.1
- AC3: Created docs/REMOTE-ACCESS.md with opt-in guide
- AC4: Updated hatch.yaml inline comments for both scripts
- AC5: Updated test expectations to match new secure default

Remote Access Opt-In:
Users who need remote API access (e.g., iOS Shortcuts) must now
explicitly set apiBindAddress: '0.0.0.0' in habitat.json.

See docs/REMOTE-ACCESS.md for complete setup guide including:
- Security considerations
- HMAC authentication requirements
- Firewall configuration
- SSH tunnel alternative

Tests: 41/41 parse_habitat tests passing, 28/28 api_config tests passing

Closes #128 (to be created)

--- a/hatch.yaml
+++ b/hatch.yaml
@@ -142,8 +142,8 @@ write_files:
           f.write('COUNCIL_GROUP_NAME="{}"\n'.format(council.get("groupName", "")))
           f.write('COUNCIL_JUDGE="{}"\n'.format(council.get("judge", "")))
           f.write('HABITAT_DOMAIN="{}"\n'.format(hab.get("domain", "")))
-          # API server bind address (default: 0.0.0.0 for iOS Shortcut remote access)
-          f.write('API_BIND_ADDRESS="{}"\n'.format(hab.get("apiBindAddress", "0.0.0.0")))
+          # API server bind address (default: 127.0.0.1 for security; set to 0.0.0.0 for remote access)
+          f.write('API_BIND_ADDRESS="{}"\n'.format(hab.get("apiBindAddress", "127.0.0.1")))
           f.write('GLOBAL_IDENTITY_B64="{}"\n'.format(b64(hab.get("globalIdentity", ""))))
           f.write('GLOBAL_BOOT_B64="{}"\n'.format(b64(hab.get("globalBoot", ""))))
           f.write('GLOBAL_BOOTSTRAP_B64="{}"\n'.format(b64(hab.get("globalBootstrap", ""))))
@@ -397,7 +397,7 @@ write_files:
       import http.server,socketserver,subprocess,json,os,base64,hmac,hashlib,time
       PORT=8080
       API_SECRET=os.getenv('API_SECRET','')
-      API_BIND_ADDRESS=os.getenv('API_BIND_ADDRESS','0.0.0.0')
+      API_BIND_ADDRESS=os.getenv('API_BIND_ADDRESS','127.0.0.1')
       HABITAT_PATH='/etc/habitat.json'
       AGENTS_PATH='/etc/agents.json'
       MARKER_PATH='/etc/config-api-uploaded'
