feat: add unauthenticated /config/status endpoint
Adds GET /config/status endpoint that returns only the api_uploaded
boolean and timestamp. No authentication required since no sensitive
data is exposed.

Fixes #130

Endpoint: GET /config/status
Response: {"api_uploaded": bool, "api_uploaded_at": float|null}

Changes:
- scripts/api-server.py: Add get_config_upload_status() and endpoint
- hatch.yaml: Same changes for embedded version
- tests/test_api_config.py: Add TestConfigStatusEndpoint class (4 tests)

--- a/hatch.yaml
+++ b/hatch.yaml
@@ -475,6 +475,16 @@ write_files:
           result["api_uploaded"]=False
         return result
 
+      def get_config_upload_status():
+        """Get simple config upload status for unauthenticated endpoint (issue #130)."""
+        result={"api_uploaded":False,"api_uploaded_at":None}
+        if os.path.exists(MARKER_PATH):
+          result["api_uploaded"]=True
+          try:
+            with open(MARKER_PATH,'r') as f:result["api_uploaded_at"]=float(f.read().strip())
+          except:pass
+        return result
+
       def trigger_config_apply():
         """Trigger config apply script asynchronously."""
         try:subprocess.Popen([APPLY_SCRIPT]);return {"ok":True,"restarting":True}
@@ -541,6 +551,9 @@ write_files:
                 self.wfile.write(f"\n=== {lf} ===\n".encode())
                 with open(lf,'r') as f:self.wfile.write(f.read()[-8192:].encode())
               except:self.wfile.write(f"  (not found)\n".encode())
+          elif self.path=='/config/status':
+            # Unauthenticated endpoint - returns only api_uploaded status (no sensitive data)
+            self.send_json(200,get_config_upload_status())
           elif self.path=='/config':
             timestamp=self.headers.get('X-Timestamp')
             signature=self.headers.get('X-Signature')
